--- a/index.html
+++ b/index.html
@@ -1,48 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Address Form</title>
-    <style>
-        /* Your CSS styles */
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Product Page</title>
 </head>
 <body>
-    <div class="container">
-        <h2>Enter Your Address</h2>
-        <form id="addressForm">
-            <label for="product">Product:</label><br>
-            <input type="text" id="product" name="product" value="Cake" readonly><br>
-            <label for="address">Your Address:</label><br>
-            <textarea id="address" name="address" rows="4" required></textarea><br>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
 
-    <script>
-        document.getElementById("addressForm").addEventListener("submit", function(event) {
-            event.preventDefault();
-            let product = document.getElementById("product").value;
-            let address = document.getElementById("address").value;
+<h1>Product Page</h1>
 
-            // Make an AJAX request to send the data to the server
-            let xhr = new XMLHttpRequest();
-            xhr.open("POST", "send_email.php", true);
-            xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState === XMLHttpRequest.DONE) {
-                    if (xhr.status === 200) {
-                        // Handle success response if needed
-                        alert("Address submitted successfully!");
-                    } else {
-                        // Handle error response if needed
-                        alert("Error submitting address!");
-                    }
-                }
-            };
-            xhr.send("product=" + encodeURIComponent(product) + "&address=" + encodeURIComponent(address));
-        });
-    </script>
+<div class="product">
+  <img src="product1.jpg" alt="Product 1">
+  <div class="product-details">
+    <div class="product-name">Lays</div>
+    <div class="product-price">Rs.10</div>
+    <button onclick="addToCart('Lays', 10)">Add to Cart</button>
+  </div>
+</div>
+
+<div class="product">
+  <img src="product2.jpg" alt="Product 2">
+  <div class="product-details">
+    <div class="product-name">Amul Doodh</div>
+    <div class="product-price">Rs.29</div>
+    <button onclick="addToCart('Amul', 29.00)">Add to Cart</button>
+  </div>
+</div>
+
+<script>
+  function addToCart(name, price) {
+    let cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+
+    let found = false;
+    cartItems.forEach(item => {
+      if (item.name === name) {
+        item.quantity++;
+        found = true;
+      }
+    });
+
+    if (!found) {
+      cartItems.push({ name: name, price: price, quantity: 1 });
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cartItems));
+
+    // Show pop-up message
+    showPopup(`Added ${name} to cart`);
+  }
+
+  function showPopup(message) {
+    const popup = document.createElement('div');
+    popup.classList.add('popup');
+    popup.textContent = message;
+    document.body.appendChild(popup);
+
+    setTimeout(() => {
+      popup.remove();
+    }, 2000); // Remove the popup after 2 seconds
+  }
+</script>
+
+<style>
+  .popup {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    z-index: 9999;
+  }
+</style>
+
 </body>
 </html>
