--- a/checkout.html
+++ b/checkout.html
@@ -3,67 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shopping Cart</title>
+  <title>Checkout</title>
+  <style>
+    /* Basic styling for the form */
+    body {
+      font-family: Arial, sans-serif;
+    }
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    input[type="text"], input[type="email"], input[type="tel"] {
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      box-sizing: border-box;
+    }
+    input[type="submit"] {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+    input[type="submit"]:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Your Shopping Cart</h1>
+<h1>Checkout</h1>
 
-<div id="cartItems">
-  <!-- Cart items will be displayed here dynamically -->
-</div>
+<form id="checkoutForm" action="https://formspree.io/f/xpzvlrko" method="POST" redirect="https://yourwebsite.com/thank-you.html">
+  <h2>Billing Information</h2>
+  <label for="fullname">Full Name</label>
+  <input type="text" id="fullname" name="fullname" placeholder="John Doe" required>
 
-<div id="totalValue"></div>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="john@example.com" required>
 
-<div id="cartControls">
-  <button onclick="clearCart()">Clear Cart</button>
-  <button onclick="checkout()">Checkout</button>
-</div>
+  <label for="phone">Phone Number</label>
+  <input type="tel" id="phone" name="phone" placeholder="123-456-7890" required>
+
+  <h2>Shipping Information</h2>
+  <label for="address">Address</label>
+  <input type="text" id="address" name="address" placeholder="123 Main St" required>
+
+  <label for="city">City</label>
+  <input type="text" id="city" name="city" placeholder="Anytown" required>
+
+  <label for="zip">ZIP Code</label>
+  <input type="text" id="zip" name="zip" placeholder="12345" required>
+
+  <!-- Cart Items Section -->
+  <h2>Cart Items</h2>
+  <input type="text" id="cartItems" name="cartItems" readonly placeholder="Your Cart Details">
+
+  <input type="submit" value="Place Order">
+</form>
 
 <script>
-  // Fetch cart items from storage
+  // Fetch cart items from local storage
   let cartItems = JSON.parse(localStorage.getItem('cart')) || [];
 
-  function displayCartItems() {
-    let cartItemsDiv = document.getElementById('cartItems');
+  // Construct placeholder for cart details
+  let cartDetails = cartItems.map(item => `${item.name} - Rs.${item.price} - Quantity: ${item.quantity}`).join('\n');
 
-    if (cartItems.length === 0) {
-      cartItemsDiv.innerHTML = '<p>Your cart is empty</p>';
-    } else {
-      cartItemsDiv.innerHTML = '<ul>';
-      let totalValue = 0;
-      cartItems.forEach((item, index) => {
-        totalValue += item.price * item.quantity; // Calculate total value
-        cartItemsDiv.innerHTML += `
-          <li>${item.name} - Rs.${item.price} - Quantity: ${item.quantity}
-            <button onclick="removeItem(${index})">Remove</button>
-          </li>`;
-      });
-      cartItemsDiv.innerHTML += '</ul>';
-      document.getElementById('totalValue').innerHTML = `<p>Total Value: Rs.${totalValue.toFixed(2)}</p>`;
-    }
-  }
+  // Display cart details in the placeholder
+  document.getElementById('cartItems').setAttribute('placeholder', cartDetails);
 
-  function removeItem(index) {
-    cartItems.splice(index, 1); // Remove the item from the cart array
-    localStorage.setItem('cart', JSON.stringify(cartItems)); // Update localStorage
-    displayCartItems(); // Refresh cart display
-  }
+  // Submit form event handler
+  document.querySelector('#checkoutForm').addEventListener('submit', function(e) {
+    // Construct message body including cart items
+    let messageBody = `Billing Information:\n`;
+    messageBody += `Full Name: ${document.getElementById('fullname').value}\n`;
+    messageBody += `Email: ${document.getElementById('email').value}\n`;
+    messageBody += `Phone Number: ${document.getElementById('phone').value}\n\n`;
 
-  function clearCart() {
-    cartItems = []; // Remove all items from the cart array
-    localStorage.setItem('cart', JSON.stringify(cartItems)); // Update localStorage
-    displayCartItems(); // Refresh cart display
-  }
+    messageBody += `Shipping Information:\n`;
+    messageBody += `Address: ${document.getElementById('address').value}\n`;
+    messageBody += `City: ${document.getElementById('city').value}\n`;
+    messageBody += `ZIP Code: ${document.getElementById('zip').value}\n\n`;
 
-  function checkout() {
-    // Assuming the checkout page is named checkout.html
-    // You can replace it with your actual checkout page
-    window.location.href = 'checkout.html';
-  }
+    messageBody += `Cart Items:\n`;
+    cartItems.forEach(item => {
+      messageBody += `${item.name} - Rs.${item.price} - Quantity: ${item.quantity}\n`;
+    });
 
-  // Initial display of cart items
-  displayCartItems();
+    // Add the message body to the hidden input field
+    document.getElementById('cartItems').value = messageBody;
+  });
 </script>
 
 </body>
