--- a/checkout.html
+++ b/checkout.html
@@ -41,7 +41,7 @@
 
 <h1>Checkout</h1>
 
-<form id="checkoutForm" action="https://formspree.io/f/xpzvlrko" method="POST" redirect="https://yourwebsite.com/thank-you.html">
+<form id="checkoutForm" action="https://formspree.io/f/xpzvlrko" method="POST" redirect="index.html">
   <h2>Billing Information</h2>
   <label for="fullname">Full Name</label>
   <input type="text" id="fullname" name="fullname" placeholder="John Doe" required>
