--- a/index.html
+++ b/index.html
@@ -278,6 +278,10 @@
         <h2>Soap & Shampoo</h2>
         <p>EasyGroc</p>
         <button onclick="redirectToPage('soap_and_shampoo_products.html')">View Details</button>
+    </div><div class="card">
+        <h2>Masala</h2>
+        <p>EasyGroc</p>
+        <button onclick="redirectToPage('masala_product.html')">View Details</button>
     </div>
 <div id="cart_popup"></div>
 
