--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar-container">
             <div class="logo">
                 <a href="index.html">
-                  <span class="company-name">Easy Grocs</span>
+                  <span class="company-name">Easy Groc</span>
                   <i class="fas fa-home"></i>
                 </a>
             </div>
