--- a/masala_product.html
+++ b/masala_product.html
@@ -38,6 +38,7 @@
         }
 
         .product {
+            margin: 0 auto;
             display: flex;
             flex-direction: column;
             align-items: center;
