--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
+    <title>Naroli Easy-Groc</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Font Awesome CSS -->
 <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
         <div class="navbar-container">
             <div class="logo">
                 <a href="index.html">
-                  <span class="company-name">Easy Grocs</span>
+                  <span class="company-name">Easy Groc</span>
                   <i class="fas fa-home"></i>
                 </a>
             </div>
